<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg2"
    tools:context=".ui.SelectActivity">

    <ImageView
        android:id="@+id/add_image"
        android:layout_width="0dp"
        android:layout_height="284dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mylogo"
        android:contentDescription="@string/imgDesc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/add_image"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/bg1"
            android:text="@string/camera"
            android:textAllCaps="false"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="316dp" />

        <Button
            android:id="@+id/btn_galeri"
            android:layout_marginTop="40dp"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/bg1"
            android:text="@string/gallery"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>

    <ImageView
        android:id="@+id/back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24"
        android:contentDescription="@string/imgDesc"/>

</androidx.constraintlayout.widget.ConstraintLayout>